# cosmo_cargo

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
etl_src/: process_main.py
etl_src/core/: playwright_runtime.py
etl_src/core/connection/: postgres.py  redis.py
etl_src/data/dao/: fetch.py  postgre.py  redis.py
etl_src/model/: __init__.py  shipments.py
etl_src/process/: etl.py
etl_src/utils/: init_session.py
src/: dashboard.py  main.py  process.py  process_main.py
src/core/: playwright_runtime.py
src/core/connection/: postgres.py  redis.py
src/data/: __init__.py
src/data/dao/: fetch.py  postgre.py  redis.py
src/data/dto/: shipment.py
src/model/: __init__.py  shipments.py
src/process/: etl.py
src/utils/: init_session.py
